# dumper

./: .gitignore  LICENSE  README.md  dumper.html  index.html  pyproject.toml  search.js
.github/workflows/: deploy-docs.yml
dumper/: cli.html  config.html  core.html  settings.html
src/dumper/: __init__.py  cli.py  config.py  core.py  settings.py
